HT/HT-59/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alexb-rob-test-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alexb-rob-test
  template:
    metadata:
      labels:
        app: alexb-rob-test
    spec:
      # volumes:
      #  - name: test-vol
      #    persistentVolumeClaim:
      #      claimName: ebs-gp2-claim
      containers:
        - name: app
          image: nginx:1.25.4
          ports:
            - name: http
              containerPort: 80
          # volumeMounts:
          #  - mountPath: "/mydir"
          #    name: test-vol
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
