HT/HT-59/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: alexb-rob-test
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
