HT/HT-59/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  annotations:
spec:
  ingressClassName: nginx
  rules:
  - host: "bukhenko.watashinoheyadesu.pp.ua"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
